Added a windows implementation of the Linux gettimeofday, added better methds for determining the block size and grid size for computational purposes.

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/CUDA-Project-1/VTune Profiler Results/CUDA-Project-1
+/CUDA-Project-1/My Advisor Results - CUDA-Project-1
